# devzat-plugin-rs

./: Cargo.toml  README.md  build.rs
src/: client.rs  main.rs
