[package]
name = "devzat-plugin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
devzat-rs = { git = "https://github.com/TommyPujol06/devzat-rs" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7.2"